--- a/submitad.html
+++ b/submitad.html
@@ -79,7 +79,7 @@
             </div>
             <div class="form-group">
                 <label for="price"><b class="text-white">Pret(RON)</b></label>
-                <input name="price" type="number" class="form-control" id="price" placeholder="Pret">
+                <input name="price" type="number" min="1" step="1" class="form-control" id="price" placeholder="Pret">
             </div>
             <div class="form-group">
                 <label for="addimage"><b class="text-white">Adauga o imagine</b></label>
