--- a/index.html
+++ b/index.html
@@ -12,37 +12,35 @@
 </head>
 
 <body style="background-image: url('images/background.jpg');">
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">ADP-Anunturi de pretutindeni</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active ">
-                        <a class="nav-link"><input class="form-control border-secondary py-1" type="search" name="search" id="search" placeholder="Cauta un anunt" onkeyup="searchFunction()" /></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Acasa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" class="userProfile" href="User Profile.html" id="userProfile"></a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" class="favourite" style="display: none" href="favourite.html" id="favourite">Favorite</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="postad" href="submitad.html">Plaseaza un anunt</a>
-                    </li>
-                    <li class="nav-item" class="inActiveUser" id="inActiveUser">
-                        <a class="nav-link" href="signin.html">Autentificare</a>
-                    </li>
-                    <li class="activeUser nav-item" id="activeUser">
-                        <a class="nav-link" href="index.html" onclick="signOut()">Deconectare</a>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark ">
+        <a class="navbar-brand" href="index.html">ADP-Anunturi de pretutindeni</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
+                    <span class="navbar-toggler-icon"></span> 
+        </button>
+        <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active ">
+                    <a class="nav-link"><input class="form-control border-secondary py-1" type="search" name="search" id="search" placeholder="Cauta un anunt" onkeyup="searchFunction()" /></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Acasa</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" class="userProfile" href="User Profile.html" id="userProfile"></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" class="favourite" style="display: none" href="favourite.html" id="favourite">Favorite</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" id="postad" href="submitad.html">Plaseaza un anunt</a>
+                </li>
+                <li class="nav-item active" class="inActiveUser" id="inActiveUser">
+                    <a class="nav-link" href="signin.html">Autentificare</a>
+                </li>
+                <li class="activeUser nav-item active" id="activeUser">
+                    <a class="nav-link" href="index.html" onclick="signOut()">Deconectare</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
