--- a/submitad.html
+++ b/submitad.html
@@ -11,36 +11,34 @@
 </head>
 
 <body style="background-image: url('images/background.jpg');">
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">ADP-Anunturi de pretutindeni</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">ADP-Anunturi de pretutindeni</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Acasa
+        <div class="collapse navbar-collapse" id="navbarMenu">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Acasa
                   <span class="sr-only">(current)</span>
                 </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" class="userProfile" href="User Profile.html" id="userProfile"></a>
-                    </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" class="favourite" style="display: none" href="favourite.html" id="favourite">Favorite</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" id="postad" href="submitad.html">Plaseaza un anunt</a>
-                    </li>
-                    <li class="nav-item" id="inActiveUser">
-                        <a class=" nav-link" href="signin.html">Conectare/Inregistrare</a>
-                    </li>
-                    <li class="activeUser nav-item" id="activeUser">
-                        <a class="nav-link" href="index.html" onclick="signOut()">Deconectare</a>
-                    </li>
-                </ul>
-            </div>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" class="userProfile" href="User Profile.html" id="userProfile"></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" class="favourite" style="display: none" href="favourite.html" id="favourite">Favorite</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" id="postad" href="submitad.html">Plaseaza un anunt</a>
+                </li>
+                <li class="nav-item active" id="inActiveUser">
+                    <a class=" nav-link" href="signin.html">Conectare/Inregistrare</a>
+                </li>
+                <li class="activeUser nav-item active" id="activeUser">
+                    <a class="nav-link" href="index.html" onclick="signOut()">Deconectare</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
